--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8" class="light">
 	<meta name="viewport" >
 	<title>Luana Santos Souza</title>
 	<link rel="stylesheet" href="style.css" />
@@ -10,8 +10,8 @@
 	
 
 </head>
-	<body>
-		<div class="container">
+	 <body>
+	<div class="container">
 			<div class="left_side">
 				<div class="profiletext">
 					<div id="profile">
@@ -208,8 +208,8 @@
 				</div>
 				</div>
 			</div>
-		</div>
+		</div> 
 
 		<script src="./script.js"></script>
-	</body>
+	</body> 
 </html>
