--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" class="light">
+	<meta charset="utf-8" >
 	<meta name="viewport" >
 	<title>Luana Santos Souza</title>
 	<link rel="stylesheet" href="style.css" />
