git commit -m "update css"

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 						<li>
 							<a href="luana_slorenzon@outlook.com">
 							<span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-							<img src="https://img.icons8.com/nolan/64/ms-outlook.png"/>
+							<img class= "image" src="https://img.icons8.com/nolan/64/ms-outlook.png"/>
 							<span class="text">Outlook</span>
 						</li>
 						
 						<li>
 						   <a href="https://github.com/lulorenzon?tab=following">
 							<span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
-							<img src="https://img.icons8.com/nolan/64/github.png"/>
+							<img class= "image" src="https://img.icons8.com/nolan/64/github.png"/>
 							<span class="text">GitHub</span>
 							</a>
 							</span>
@@ -54,14 +54,14 @@
 						<li>
 							<a href="https://www.linkedin.com/in/luana-santos-b06a9117b/">
 							<span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
-							<img src="https://img.icons8.com/nolan/64/linkedin-circled.png"/>
+							<img class= "image" src="https://img.icons8.com/nolan/64/linkedin-circled.png"/>
 							<span class="text">Linkedin</span>
 							</a>
 							</span>
 						</li>
 						<li>
 							<span class="icon"><i class="fa fa-mobile" aria-hidden="true"></i></span>
-							<img src="https://img.icons8.com/nolan/64/phone-disconnected.png"/>
+							<img class= "image" src="https://img.icons8.com/nolan/64/phone-disconnected.png"/>
 							<span class="text">11 96141-7580</span>
 						</li>
 						
